[project]
name = "pmv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "pdf2image>=1.17.0",
]

[project.scripts]
pmv = "main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["image_viewer"]
py-modules = ["main", "show_image"]
